# tree-sitter-language-pack

./: .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ai-rulez.yaml  language_definitions.json  pyproject.toml  setup.py
.github/actions/build-wheel/: action.yml
.github/actions/test-wheel/: action.yml
.github/workflows/: build_and_publish.yaml  ci.yaml  release.yaml
parsers/COBOL/src/: scanner.c
patches/COBOL/src/: scanner.c
scripts/: clone_vendors.py  pin_vendors.py  process_vendors.py  update_dependencies.py
sources/: language_definitions.json  language_extension.c
src/: language_definitions.json
tests/: entry_point_test.py  test_windows_compatibility.py  windows_compatibility_test.py
tree_sitter_language_pack/: __init__.py
